istio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gym-reg
  labels:
    istio-injection: enabled
