istio/service-entry.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: external-apis
  namespace: gym-reg
spec:
  hosts:
    - "*.googleapis.com"
    - "*.github.com"
    - "registry.npmjs.org"
    - "registry.docker.io"
  ports:
    - number: 443
      name: https
      protocol: HTTPS
    - number: 80
      name: http
      protocol: HTTP
  location: MESH_EXTERNAL
  resolution: DNS
