istio/sidecar.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: default
  namespace: gym-reg
spec:
  egress:
    - hosts:
        - "./*"
        - "istio-system/*"
