istio/virtualservice-frontend.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frontend
  namespace: gym-reg
spec:
  hosts:
    - "*"
  gateways:
    - gym-reg-gateway
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: frontend
            port:
              number: 3000
